--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "morgan": "~1.6.1",
+    "ngeohash": "^0.6.0",
     "serve-favicon": "~2.3.0"
   }
 }
