--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "gdoc": "apidoc -i apiDoc/ -o public/doc"
   },
   "dependencies": {
     "async": "^1.4.2",
@@ -20,5 +21,12 @@
     "morgan": "~1.6.1",
     "ngeohash": "^0.6.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "apidoc": "^0.13.1"
+  },
+  "apidoc": {
+    "title": "API文档",
+    "description": "KanKan项目API文档"
   }
 }
