--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "async": "^1.4.2",
     "baidu_push": "^0.2.0",
     "body-parser": "~1.13.2",
+    "compression": "^1.5.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
@@ -22,9 +23,7 @@
     "ngeohash": "^0.6.0",
     "serve-favicon": "~2.3.0"
   },
-  "devDependencies": {
-    "apidoc": "^0.13.1"
-  },
+  "devDependencies": {},
   "apidoc": {
     "title": "API文档",
     "description": "KanKan项目API文档"
